src/components/status.css
/* ... */
.carousel-item button.media-alt[hidden] {
  opacity: 0;
}
@media (hover: hover) {
  .carousel-item button.media-alt {
    opacity: 0;
    transform: translateY(var(--bottom)) scale(0.95);
    transition: all 0.2s ease-in-out;
  }
  .carousel-item:hover button.media-alt {
    opacity: 1;
    transform: translateY(0) scale(1);
  }
  .carousel-item button.media-alt[hidden] {
    opacity: 1;
  }
}

/* CARD */

.card {
  display: flex;
  margin-top: 8px;
  border-radius: 8px;
  border: 1px solid var(--outline-color);
  overflow: hidden;
  color: inherit;
  align-items: stretch;
  background-color: var(--bg-color);
  max-width: 480px;
  /* max-height: 160px; */
}
.status.large .card.large,
.status-carousel .content-container[data-content-text-weight='1'] .card.large {
  border-radius: 16px;
  flex-direction: column;
  max-height: none;
}
.card .card-image {
  flex-shrink: 0;
  width: 35%;
  position: relative;
  border-inline-end: 1px solid var(--outline-color);
}
.card .card-image img {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
}
/* .card .image {
  width: 35%;
  height: auto;
  flex-grow: 1;
  border-inline-end: 1px solid var(--outline-color);
  object-fit: cover;
  aspect-ratio: 1 / 1;
} */
.status.large .card .card-image {
  aspect-ratio: 1 / 1;
}
.status.large .card.large .card-image,
.status-carousel
  .content-container[data-content-text-weight='1']
  .card.large
  .card-image {
  flex-grow: 1;
  aspect-ratio: 1.91 / 1;
  width: 100%;
  max-height: 40vh;
  border-inline-end: 0;
  border-block-end: 1px solid var(--outline-color);
}
.card:is(:hover, :focus) img,
a:focus-visible .card img {
  animation: position-object 5s ease-in-out 1s 5;
}
.card p {
  margin: 0;
}
.card .meta-container {
  padding: 8px;
  min-width: 0;
  flex-grow: 1;
  align-self: center;
}
.status.large .card.large .meta-container,
.status-carousel
  .content-container[data-content-text-weight='1']
  .card.large
  .meta-container {
  align-self: flex-start;
  flex-grow: 0;
}
.card .title {
  line-height: 1.25;
  font-weight: normal;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
}
.card .meta {
  font-size: smaller;
  opacity: 0.75;
  margin: 0;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
}
.card .meta.domain {
  opacity: 1;
  color: var(--link-color);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
}
a.card {
  text-decoration: none;
  transition: opacity 0.2s ease-in-out;
}
a.card:is(:hover, :focus) {
  border: 1px solid var(--link-color);
  box-shadow: 0 0 0 2px var(--link-faded-color);
}
.card.video {
  max-width: 320px;
  max-height: 320px;
}
.card.video iframe {
  width: 100%;
  height: 100%;
}

/* POLLS */

.poll {
  transition: opacity 0.2s ease-in-out;
}
.poll.loading {
  opacity: 0.5;
  pointer-events: none;
}
.poll.read-only {
  pointer-events: none;
}
.poll-option {
  margin-top: 8px;
  padding: 8px;
  display: flex;
  gap: 8px;
  justify-content: space-between;
  background-color: var(--bg-faded-color);
  background-image: linear-gradient(
    to right,
    var(--link-faded-color),
    var(--link-faded-color) var(--percentage),
    transparent var(--percentage),
    transparent
  );
  background-repeat: no-repeat;
  border-radius: 8px;
  border: 1px solid var(--outline-color);
  align-items: center;
  text-shadow: 0 1px var(--bg-blur-color);
}
.poll-label {
  width: 100%;
  display: flex;
  gap: 8px;
  cursor: pointer;
}
.poll-label input:is([type='radio'], [type='checkbox']) {
  flex-shrink: 0;
}
.poll-option-votes {
  flex-shrink: 0;
  font-size: 90%;
  opacity: 0.75;
}
.poll-option-leading .poll-option-votes {
  font-weight: bold;
  opacity: 1;
}
.poll-vote-button {
  margin-top: 8px;
}
.poll-meta {
  margin: 8px 0;
  font-size: 90%;
}
.poll-option-title .icon {
  vertical-align: middle;
}

/* EXTRA META */

.status .extra-meta {
  padding-top: 8px;
  color: var(--text-insignificant-color);
  font-size: 90%;
}
.status .extra-meta * {
  vertical-align: middle;
}
.status .extra-meta a {
  color: inherit;
  text-decoration: none;
}
.status .extra-meta a:is(:hover, :focus) {
  text-decoration: underline;
}
.status .extra-meta .edited:is(:hover, :focus) {
  cursor: pointer;
  color: var(--text-color);
}
.status.large .extra-meta {
  padding-top: 0;
  margin-left: calc(-50px - 16px);
}

/* ACTIONS */

.status .actions {
  display: flex;
  gap: 8px;
}
.status.large .actions {
  padding-top: 4px;
  padding-bottom: 16px;
  margin-left: calc(-50px - 16px);
  color: var(--text-insignificant-color);
  border-top: var(--hairline-width) solid var(--outline-color);
  margin-top: 8px;
}
.status.large .actions.disabled {
  pointer-events: none;
  opacity: 0.5;
}
.status .action.has-count {
  flex: 1;
}
.status .action > button {
  min-height: 40px;
  min-width: 40px;
  padding: 0 8px;
  font-variant-numeric: tabular-nums;
}
.status .action > button.plain {
  color: inherit;
  border: 1.5px solid transparent;
}
.status .action > button.plain:is(:hover, :focus) {
  color: var(--link-color);
  background-color: var(--button-plain-bg-hover-color);
}
.status .action > button.plain.reblog-button:is(:hover, :focus) {
  color: var(--reblog-color);
}
.status .action > button.plain.reblog-button.checked {
  color: var(--reblog-color);
  border-color: var(--reblog-color);
}
@keyframes reblogged {
  5% {
    transform: translate(-2px, -2px);
  }
  10% {
    transform: translate(2px, 2px);
  }
  15% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(30px, -30px);
    opacity: 0;
  }
}
.status .action > button.plain.reblog-button.checked .icon {
  animation: reblogged 1s ease-in-out;
}
/* ... */

